--- a/views/products.ejs
+++ b/views/products.ejs
@@ -10,13 +10,11 @@
       <h1 class="heading">Products</h1>
       <% if (products?.length > 0) { %>
       <ul>
-        <% products.forEach(product => { %>
         <li>
-          Name: <%= product.name %>, Description: <%= product.description %>
-          <a href="/products/<%= product.name %>">Details</a>
-          <button onclick="deleteProduct('<%= product.name %>')">Delete</button>
-        </li>
+        <% products.forEach(product => { %>
+            <%- include("partials/card", { product: product }) %>
         <% }); %>
+        </li>
       </ul>
       <% } else { %>
       <br />
